--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.16.2",
     "express-session": "^1.15.6",
     "fs": "0.0.1-security",
+    "ipfs-api": "^22.2.3",
     "is-empty": "^1.2.0",
     "monaco-editor": "^0.10.1",
     "mongoose": "^5.0.3",
@@ -39,10 +40,13 @@
     "passport-local-mongoose": "^4.4.0",
     "passport-twitter": "^1.0.4",
     "path": "^0.12.7",
+    "promise-defer": "^1.0.0",
+    "request-promise": "^4.2.2",
     "robots.txt": "^1.1.0",
     "t": "^0.5.1",
     "truffle-blockchain-utils": "0.0.3",
     "truffle-contract-schema": "^1.0.1",
+    "uport-connect": "^0.7.3",
     "web3": "^0.20.4"
   },
   "devDependencies": {
